# squad-qa

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: bert_qa.ipynb
notebooks/additional_approach/: catboost_with_val.py  get_embeddigs.ipynb  get_embeddings_val.ipynb
src/: bertQA.py  config.py  data_containers.py  main.py  model_wrapper.py
